--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
+permissions: 
+  id-token: write
+
 # Controls when the action will run.
 on:
   schedule:
